[package]
name = "rust-superkmers"
authors = ["Rayan Chikhi <rayan.chikhi@pasteur.fr>"]
description = "Construction and iteration of superkmers from a DNA sequence."
version = "0.1.0"
edition = "2021"
keywords = ["bioinformatics"]
categories = ["science", "algorithms"]
license = "MIT/Apache-2.0"

[dependencies]
array_tool = "1.0.3"
nthash = "0.5.1"
nthash32 = { git = "https://github.com/rchikhi/rust-nthash32"  }
thiserror = "1.0"
fxhash = "0.2.1"
rand = "^0.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false

#[profile.release]
#debug = true # for callgrind

#[profile.bench]
#debug = true
