[package]
name = "rust-superkmers"
authors = ["Rayan Chikhi <rayan.chikhi@pasteur.fr>"]
description = "Construction and iteration of superkmers from a DNA sequence."
version = "0.1.0"
edition = "2021"
keywords = ["bioinformatics"]
categories = ["science", "algorithms"]
license = "MIT/Apache-2.0"

[dependencies]
nthash = "0.5.1"
nthash32 = { git = "https://github.com/rchikhi/rust-nthash32"  }
rust-seq2kminmers = { git = "https://github.com/rchikhi/rust-seq2kminmers" }
rand = "^0.5"
colored = "2.0.0"
bio = "*" # for revcomp
#cocktail = { git="https://github.com/natir/cocktail.git" }
debruijn = "*"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false

#[profile.release]
#debug = true # for callgrind

[profile.bench]
lto = true

