[package]
name = "rust-superkmers"
authors = ["Rayan Chikhi <rayan.chikhi@pasteur.fr>"]
description = "Construction and iteration of superkmers from a DNA sequence."
version = "0.1.0"
edition = "2021"
keywords = ["bioinformatics"]
categories = ["science", "algorithms"]
license = "MIT/Apache-2.0"

[features]
simd-mini = ["simd-minimizers"]
multi-mini = ["multiminimizers"]
default = ["simd-mini"]

[dependencies]
nthash = "0.5.1"
nthash32 = { git = "https://github.com/rchikhi/rust-nthash32"  }
rand = "0.9"
colored = "2"
bio = "*" # for revcomp
#cocktail = { git="https://github.com/natir/cocktail.git" }
debruijn = "*"
twox-hash = "*"
#static_init = "*" # crashes on my large static arrays with SIGSEGV
lazy_static = "*"
simd-minimizers = { git = "https://github.com/rchikhi/simd-minimizers-cpp", branch = "run-with-buf-pub", optional = true }
multiminimizers = { git = "https://github.com/lrobidou/multiminimizers", optional = true }

[dev-dependencies]
criterion = "0.5"
simd-minimizers = { git = "https://github.com/rchikhi/simd-minimizers-cpp", branch = "run-with-buf-pub" }

[[bench]]
name = "bench"
harness = false

#[profile.release]
#debug = true # for callgrind

[profile.bench]
#lto = true

